@@ -22,6 +22,8 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
+import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
+
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -39,20 +41,20 @@ public abstract class AbstractCloseAction extends AbstractAppAction {
 	 */
 	public AbstractCloseAction(boolean onToolBar) {
 		putValue(NAME, Messages.getString("AbstractCloseAction.Name"));
-		putValue(SMALL_ICON, loadIcon("process-stop", 16));
-		putValue(MEDIUM_ICON, loadIcon("process-stop", 24));
+		putValue(SMALL_ICON, loadIcon(BootstrapIcons.CIRCLE_FILL, 16));
+		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.CIRCLE_FILL, 24));
 		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.ALT_MASK | InputEvent.SHIFT_MASK));
 		putValue(SHORT_DESCRIPTION, Messages.getString("AbstractCloseAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION, Messages.getString("AbstractCloseAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('c'));
-		putValue(ON_MENUBAR, new Boolean(true));
+		putValue(MNEMONIC_KEY, Integer.valueOf('c'));
+		putValue(ON_MENUBAR, Boolean.valueOf(true));
 		putValue(MENU_NAME, "File");
-		putValue(MENU_ITEM_GROUP, new Integer(0));
-		putValue(MENU_ITEM_WEIGHT, new Integer(60));
-		putValue(ON_TOOLBAR, new Boolean(onToolBar));
+		putValue(MENU_ITEM_GROUP, Integer.valueOf(0));
+		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(60));
+		putValue(ON_TOOLBAR, Boolean.valueOf(onToolBar));
 		if (onToolBar) {
-			putValue(TOOLBAR_GROUP, new Integer(0));
-			putValue(TOOLBAR_WEIGHT, new Integer(10));
+			putValue(TOOLBAR_GROUP, Integer.valueOf(0));
+			putValue(TOOLBAR_WEIGHT, Integer.valueOf(10));
 			putValue(TEXT_ON_TOOLBAR, Boolean.TRUE);
 		}
 	}
