@@ -18,6 +18,8 @@
 /* HEADER */
 package com.sshtools.appframework.actions;
 
+import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
+
 /**
  * Abstract implementation of an {@link AbstractAppAction} that can be used in
  * the context of editing a connection profile.
@@ -30,16 +32,16 @@ public abstract class AbstractEditAction extends AbstractAppAction {
 	 */
 	public AbstractEditAction() {
 		putValue(NAME, Messages.getString("AbstractEditAction.Name"));
-		putValue(SMALL_ICON, loadIcon("accessories-text-editor", 16));
-		putValue(MEDIUM_ICON, loadIcon("accessories-text-editor", 24));
+		putValue(SMALL_ICON, loadIcon(BootstrapIcons.PENCIL_SQUARE, 16));
+		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.PENCIL_SQUARE, 24));
 		putValue(SHORT_DESCRIPTION, Messages.getString("AbstractEditAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION, Messages.getString("AbstractEditAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('e'));
+		putValue(MNEMONIC_KEY, Integer.valueOf('e'));
 		putValue(ACTION_COMMAND_KEY, "edit-command");
-		putValue(ON_MENUBAR, new Boolean(true));
+		putValue(ON_MENUBAR, Boolean.valueOf(true));
 		putValue(MENU_NAME, "File");
-		putValue(MENU_ITEM_GROUP, new Integer(0));
-		putValue(MENU_ITEM_WEIGHT, new Integer(6));
-		putValue(ON_TOOLBAR, new Boolean(false));
+		putValue(MENU_ITEM_GROUP, Integer.valueOf(0));
+		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(6));
+		putValue(ON_TOOLBAR, Boolean.valueOf(false));
 	}
 }
