@@ -24,6 +24,8 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
+import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
+
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -39,13 +41,13 @@ public abstract class AbstractPrintAction extends AbstractAppAction {
 	 */
 	public AbstractPrintAction() {
 		putValue(NAME, Messages.getString("AbstractPrintAction.Name"));
-		putValue(SMALL_ICON, loadIcon("document-print", 16));
-		putValue(MEDIUM_ICON, loadIcon("document-print", 24));
+		putValue(SMALL_ICON, loadIcon(BootstrapIcons.PRINTER, 16));
+		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.PRINTER, 24));
 		putValue(SHORT_DESCRIPTION,
 				Messages.getString("AbstractPrintAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION,
 				Messages.getString("AbstractPrintAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('p'));
+		putValue(MNEMONIC_KEY, Integer.valueOf('p'));
 		putValue(
 				ACCELERATOR_KEY,
 				KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_MASK
