@@ -23,6 +23,8 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
+import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
+
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -40,20 +42,20 @@ public abstract class AbstractSaveAction extends AbstractAppAction {
 	 */
 	public AbstractSaveAction(boolean onToolBar) {
 		putValue(NAME, VAL_NAME);
-		putValue(SMALL_ICON, loadIcon("document-save", 16));
-		putValue(MEDIUM_ICON, loadIcon("document-save", 24));
+		putValue(SMALL_ICON, loadIcon(BootstrapIcons.FILE_WORD_FILL, 16));
+		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.FILE_WORD_FILL, 24));
 		putValue(SHORT_DESCRIPTION, Messages.getString("AbstractSaveAction.ShortDesc"));
 		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_S, InputEvent.ALT_MASK + InputEvent.SHIFT_MASK));
 		putValue(LONG_DESCRIPTION, Messages.getString("AbstractSaveAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('s'));
+		putValue(MNEMONIC_KEY, Integer.valueOf('s'));
 		putValue(MENU_NAME, "File");
-		putValue(MENU_ITEM_GROUP, new Integer(0));
-		putValue(ON_MENUBAR, new Boolean(true));
-		putValue(MENU_ITEM_WEIGHT, new Integer(50));
-		putValue(ON_TOOLBAR, new Boolean(onToolBar));
+		putValue(MENU_ITEM_GROUP, Integer.valueOf(0));
+		putValue(ON_MENUBAR, Boolean.valueOf(true));
+		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(50));
+		putValue(ON_TOOLBAR, Boolean.valueOf(onToolBar));
 		if (onToolBar) {
-			putValue(TOOLBAR_GROUP, new Integer(0));
-			putValue(TOOLBAR_WEIGHT, new Integer(20));
+			putValue(TOOLBAR_GROUP, Integer.valueOf(0));
+			putValue(TOOLBAR_WEIGHT, Integer.valueOf(20));
 			putValue(TEXT_ON_TOOLBAR, Boolean.TRUE);
 		}
 	}
